Basic javascript complete

--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
         <input type="text" name="todo" id="todo"/>
       </form>
       <ul class="todo-items">
-        <li class="todo-item">
+        <!-- <li class="todo-item">
           <p>
             <input type="checkbox" name="todo_complete" />
             <span> First todo item</span>
           </p>
           <button>Delete</button>
-        </li>
+        </li> -->
       
       </ul>
     </main>
