Included checkbox toggler

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
         <input type="text" name="todo" id="todo"/>
       </form>
       <ul class="todo-items">
-        <!-- <li class="todo-item">
+        
+            <!-- <li class="todo-item">
           <p>
             <input type="checkbox" name="todo_complete" />
             <span> First todo item</span>
@@ -24,6 +25,6 @@
       
       </ul>
     </main>
-    <script src="./index.js"></script>
+    <script src="./index.js" type="module"></script>
   </body>
 </html>
