Hooked up delete button function

--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
       </form>
       <ul class="todo-items">
         
-            <!-- <li class="todo-item">
+            <!-- 
+                to visualize layout
+                <li class="todo-item">
           <p>
             <input type="checkbox" name="todo_complete" />
             <span> First todo item</span>
